--- a/theme.toml
+++ b/theme.toml
@@ -1,15 +1,15 @@
-name = "Easy Docs"
+name = "Hugo Baesd Bloxxx"
 license = "MIT"
-licenselink = "https://github.com/HugoBlox/theme-documentation/blob/main/LICENSE.md"
-description = "Easy, all-in-one beautiful documentation website including a customizable homepage and blog. Super fast, empowering you to focus on your content."
+licenselink = "https://github.com/jkrebian/jkrebian.github.io/blob/main/LICENSE"
+description = "Hugo Based Bloxxx"
 
-homepage = "https://github.com/HugoBlox/theme-documentation"
-demosite = "https://hugo-docs-theme.netlify.app"
+homepage = "https://github.com/jkrebian/jkrebian.github.io"
+deploysite = "https://jkrebian.netlify.app"
 
 tags = ["landing", "docs", "blog", "responsive", "minimal", "light", "dark", "multilingual", "dark mode", "tailwind", "company", "gallery"]
 features = ["secure", "fast", "search", "dark mode", "widgets"]
 
 # If the theme has a single author
 [author]
-  name = "George Cushen"
-  homepage = "https://georgecushen.com/"
+  name = "John Krebian"
+  homepage = "https://jkrebian.github.io/"
